--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "discord.js": "^14.8.0",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
-    "nodemon": "^2.0.22"
+    "mysql2": "^3.2.0",
+    "nodemon": "^2.0.22",
+    "sequelize": "^6.30.0"
   }
 }
